--- a/notebooks/02_Genomes/Annotations.ipynb
+++ b/notebooks/02_Genomes/Annotations.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#XXX pip install gffutils\n",
+    "#pip install gffutils\n",
     "from collections import defaultdict\n",
     "\n",
     "import gffutils\n",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -26,24 +26,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2018-05-04 12:02:39--  http://www.vectorbase.org/download/anopheles-gambiae-pestbasefeaturesagamp42gff3gz\n",
+      "--2018-05-18 16:43:06--  http://www.vectorbase.org/download/anopheles-gambiae-pestbasefeaturesagamp42gff3gz\n",
       "Resolving www.vectorbase.org (www.vectorbase.org)... 129.74.255.228\n",
       "Connecting to www.vectorbase.org (www.vectorbase.org)|129.74.255.228|:80... connected.\n",
       "HTTP request sent, awaiting response... 302 Found\n",
       "Location: https://www.vectorbase.org/download/anopheles-gambiae-pestbasefeaturesagamp42gff3gz [following]\n",
-      "--2018-05-04 12:02:39--  https://www.vectorbase.org/download/anopheles-gambiae-pestbasefeaturesagamp42gff3gz\n",
+      "--2018-05-18 16:43:06--  https://www.vectorbase.org/download/anopheles-gambiae-pestbasefeaturesagamp42gff3gz\n",
       "Connecting to www.vectorbase.org (www.vectorbase.org)|129.74.255.228|:443... connected.\n",
       "HTTP request sent, awaiting response... 302 Found\n",
       "Location: https://www.vectorbase.org/sites/default/files/ftp/downloads/Anopheles-gambiae-PEST_BASEFEATURES_AgamP4.2.gff3.gz [following]\n",
-      "--2018-05-04 12:02:40--  https://www.vectorbase.org/sites/default/files/ftp/downloads/Anopheles-gambiae-PEST_BASEFEATURES_AgamP4.2.gff3.gz\n",
+      "--2018-05-18 16:43:07--  https://www.vectorbase.org/sites/default/files/ftp/downloads/Anopheles-gambiae-PEST_BASEFEATURES_AgamP4.2.gff3.gz\n",
       "Reusing existing connection to www.vectorbase.org:443.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 2702601 (2.6M) [application/x-gzip]\n",
       "Saving to: ‘gambiae.gff.gz’\n",
       "\n",
-      "gambiae.gff.gz      100%[===================>]   2.58M  8.32MB/s    in 0.3s    \n",
+      "gambiae.gff.gz      100%[===================>]   2.58M  8.38MB/s    in 0.3s    \n",
       "\n",
-      "2018-05-04 12:02:40 (8.32 MB/s) - ‘gambiae.gff.gz’ saved [2702601/2702601]\n",
+      "2018-05-18 16:43:07 (8.38 MB/s) - ‘gambiae.gff.gz’ saved [2702601/2702601]\n",
       "\n"
      ]
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -152,26 +152,18 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "contig 2L, number of genes 3105\n",
-      "contig 3R, number of genes 2763\n",
-      "contig UNKN, number of genes 567\n",
-      "contig X, number of genes 1097\n",
-      "contig Y_unplaced, number of genes 0\n",
-      "contig Mt, number of genes 37\n",
-      "contig 2R, number of genes 3834\n",
-      "contig 3L, number of genes 2221\n",
-      "Max number of exons: AGAP010147 (188)\n",
-      "Max span: AGAP006656 (365621)\n",
-      "defaultdict(<class 'int'>, {2: 910, 1: 11595, 3: 211, 4: 74, 0: 781, 11: 3, 5: 27, 8: 4, 12: 1, 7: 5, 6: 9, 13: 1, 10: 1, 20: 1, 9: 1})\n",
-      "defaultdict(<class 'int'>, {8: 481, 2: 3147, 11: 253, 1: 1995, 3: 2379, 19: 82, 21: 79, 31: 22, 23: 70, 10: 316, 6: 869, 4: 1701, 12: 265, 93: 3, 5: 1088, 26: 49, 7: 651, 13: 196, 15: 162, 14: 144, 9: 408, 35: 31, 20: 91, 38: 16, 16: 102, 24: 64, 18: 90, 17: 76, 46: 3, 37: 23, 110: 11, 53: 5, 30: 53, 27: 29, 22: 36, 48: 20, 44: 12, 75: 12, 50: 23, 41: 7, 71: 7, 25: 31, 47: 25, 32: 15, 34: 34, 52: 5, 102: 4, 43: 8, 28: 34, 36: 22, 33: 21, 49: 7, 57: 7, 42: 9, 70: 3, 29: 17, 39: 25, 45: 16, 188: 11, 68: 3, 89: 5, 56: 22, 40: 8, 51: 9, 54: 5, 67: 1, 86: 10, 120: 4, 77: 6, 104: 20, 141: 3, 150: 6, 55: 11})\n"
+     "ename": "NameError",
+     "evalue": "name 'my_exons' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-5f42add75e5b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m             \u001b[0mexon_check\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmy_mRNAs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mcheck\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mexon_check\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m             \u001b[0mnum_exons\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_exons\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_exons\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mmax_exons\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m                 \u001b[0mmax_exons\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_exons\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'my_exons' is not defined"
      ]
     }
    ],
    "source": [
-    "#XXX Change\n",
     "num_mRNAs = defaultdict(int)\n",
     "num_exons = defaultdict(int)\n",
     "max_exons = 0\n",
@@ -185,7 +177,6 @@
     "            max_span = span\n",
     "            max_span_gene = gene\n",
     "        my_mRNAs = list(db.children(gene, featuretype='mRNA'))\n",
-    "        my_exons = list(db.children(gene, featuretype='exon'))\n",
     "        num_mRNAs[len(my_mRNAs)] += 1\n",
     "        if len(my_mRNAs) == 0:\n",
     "            exon_check = [gene]\n",
