--- a/notebooks/02_Genomes/Annotations.ipynb
+++ b/notebooks/02_Genomes/Annotations.ipynb
@@ -146,20 +146,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'my_exons' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-5f42add75e5b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m             \u001b[0mexon_check\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmy_mRNAs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mcheck\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mexon_check\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m             \u001b[0mnum_exons\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_exons\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_exons\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mmax_exons\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m                 \u001b[0mmax_exons\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmy_exons\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'my_exons' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "contig 2L, number of genes 3105\n",
+      "contig 3R, number of genes 2763\n",
+      "contig UNKN, number of genes 567\n",
+      "contig X, number of genes 1097\n",
+      "contig Y_unplaced, number of genes 0\n",
+      "contig Mt, number of genes 37\n",
+      "contig 2R, number of genes 3834\n",
+      "contig 3L, number of genes 2221\n",
+      "Max number of exons: AGAP001660 (67)\n",
+      "Max span: AGAP006656 (365621)\n",
+      "defaultdict(<class 'int'>, {2: 910, 1: 11595, 3: 211, 4: 74, 0: 781, 11: 3, 5: 27, 8: 4, 12: 1, 7: 5, 6: 9, 13: 1, 10: 1, 20: 1, 9: 1})\n",
+      "defaultdict(<class 'int'>, {4: 2091, 2: 3359, 5: 1411, 6: 1039, 1: 2019, 3: 2838, 9: 419, 10: 298, 11: 202, 8: 454, 12: 159, 31: 5, 7: 718, 13: 106, 15: 65, 19: 28, 16: 45, 17: 53, 14: 65, 26: 3, 18: 22, 21: 9, 22: 7, 24: 6, 30: 5, 20: 19, 32: 1, 33: 1, 27: 2, 28: 5, 23: 6, 34: 1, 29: 4, 25: 9, 67: 1, 50: 1, 49: 1, 42: 1})\n"
      ]
     }
    ],
@@ -183,6 +190,7 @@
     "        else:\n",
     "            exon_check = my_mRNAs\n",
     "        for check in exon_check:\n",
+    "            my_exons = list(db.children(check, featuretype='exon'))\n",
     "            num_exons[len(my_exons)] += 1\n",
     "            if len(my_exons) > max_exons:\n",
     "                max_exons = len(my_exons)\n",
