--- a/notebooks/02_Genomes/Orthology.ipynb
+++ b/notebooks/02_Genomes/Orthology.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -37,126 +37,126 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saccharomyces_cerevisiae\n",
-      "mus_pahari\n",
-      "taeniopygia_guttata\n",
-      "otolemur_garnettii\n",
-      "erinaceus_europaeus\n",
-      "anolis_carolinensis\n",
-      "gadus_morhua\n",
-      "capra_hircus\n",
-      "chlorocebus_sabaeus\n",
-      "colobus_angolensis_palliatus\n",
-      "tursiops_truncatus\n",
-      "mus_musculus\n",
-      "bos_taurus\n",
-      "monodelphis_domestica\n",
-      "caenorhabditis_elegans\n",
-      "pteropus_vampyrus\n",
-      "microcebus_murinus\n",
-      "mandrillus_leucophaeus\n",
-      "ovis_aries\n",
-      "carlito_syrichta\n",
-      "mus_musculus_akrj\n",
-      "fukomys_damarensis\n",
-      "pelodiscus_sinensis\n",
-      "astyanax_mexicanus\n",
-      "mus_musculus_aj\n",
-      "peromyscus_maniculatus_bairdii\n",
-      "ficedula_albicollis\n",
-      "rhinopithecus_roxellana\n",
-      "cricetulus_griseus_chok1gshd\n",
-      "cavia_aperea\n",
-      "dipodomys_ordii\n",
-      "lepisosteus_oculatus\n",
-      "anas_platyrhynchos\n",
-      "canis_familiaris\n",
-      "callithrix_jacchus\n",
-      "pongo_abelii\n",
-      "mustela_putorius_furo\n",
-      "mus_musculus_c57bl6nj\n",
-      "xenopus_tropicalis\n",
-      "nannospalax_galili\n",
-      "mus_musculus_pwkphj\n",
-      "aotus_nancymaae\n",
-      "mus_musculus_nzohlltj\n",
-      "mus_musculus_129s1svimj\n",
-      "mus_musculus_cbaj\n",
-      "cavia_porcellus\n",
-      "ochotona_princeps\n",
-      "pan_troglodytes\n",
-      "petromyzon_marinus\n",
-      "pan_paniscus\n",
-      "mus_musculus_c3hhej\n",
-      "procavia_capensis\n",
-      "oryzias_latipes\n",
-      "rhinopithecus_bieti\n",
-      "danio_rerio\n",
-      "gallus_gallus\n",
-      "tupaia_belangeri\n",
-      "saimiri_boliviensis_boliviensis\n",
-      "ciona_intestinalis\n",
-      "poecilia_formosa\n",
-      "ciona_savignyi\n",
-      "myotis_lucifugus\n",
-      "sorex_araneus\n",
-      "mesocricetus_auratus\n",
-      "dasypus_novemcinctus\n",
-      "mus_caroli\n",
-      "mus_musculus_wsbeij\n",
-      "choloepus_hoffmanni\n",
-      "heterocephalus_glaber_female\n",
-      "jaculus_jaculus\n",
-      "cricetulus_griseus_crigri\n",
-      "sus_scrofa\n",
-      "rattus_norvegicus\n",
-      "microtus_ochrogaster\n",
-      "sarcophilus_harrisii\n",
-      "papio_anubis\n",
-      "macaca_fascicularis\n",
-      "equus_caballus\n",
-      "xiphophorus_maculatus\n",
-      "macaca_mulatta\n",
-      "mus_musculus_balbcj\n",
-      "macaca_nemestrina\n",
-      "mus_musculus_dba2j\n",
-      "latimeria_chalumnae\n",
-      "mus_musculus_nodshiltj\n",
-      "mus_spretus\n",
-      "gasterosteus_aculeatus\n",
-      "gorilla_gorilla\n",
-      "oryctolagus_cuniculus\n",
-      "oreochromis_niloticus\n",
-      "echinops_telfairi\n",
-      "nomascus_leucogenys\n",
-      "homo_sapiens\n",
-      "mus_musculus_casteij\n",
-      "ornithorhynchus_anatinus\n",
-      "tetraodon_nigroviridis\n",
-      "cercocebus_atys\n",
-      "vicugna_pacos\n",
-      "meleagris_gallopavo\n",
-      "mus_musculus_fvbnj\n",
-      "ictidomys_tridecemlineatus\n",
-      "octodon_degus\n",
-      "takifugu_rubripes\n",
-      "cebus_capucinus\n",
-      "ailuropoda_melanoleuca\n",
-      "chinchilla_lanigera\n",
-      "felis_catus\n",
-      "heterocephalus_glaber_male\n",
-      "mus_musculus_lpj\n",
-      "loxodonta_africana\n",
-      "drosophila_melanogaster\n",
-      "notamacropus_eugenii\n",
-      "propithecus_coquereli\n"
+      "0 saccharomyces_cerevisiae\n",
+      "1 mus_pahari\n",
+      "2 taeniopygia_guttata\n",
+      "3 otolemur_garnettii\n",
+      "4 erinaceus_europaeus\n",
+      "5 anolis_carolinensis\n",
+      "6 gadus_morhua\n",
+      "7 capra_hircus\n",
+      "8 chlorocebus_sabaeus\n",
+      "9 colobus_angolensis_palliatus\n",
+      "10 tursiops_truncatus\n",
+      "11 mus_musculus\n",
+      "12 bos_taurus\n",
+      "13 monodelphis_domestica\n",
+      "14 caenorhabditis_elegans\n",
+      "15 pteropus_vampyrus\n",
+      "16 microcebus_murinus\n",
+      "17 mandrillus_leucophaeus\n",
+      "18 ovis_aries\n",
+      "19 carlito_syrichta\n",
+      "20 mus_musculus_akrj\n",
+      "21 fukomys_damarensis\n",
+      "22 pelodiscus_sinensis\n",
+      "23 astyanax_mexicanus\n",
+      "24 mus_musculus_aj\n",
+      "25 peromyscus_maniculatus_bairdii\n",
+      "26 ficedula_albicollis\n",
+      "27 rhinopithecus_roxellana\n",
+      "28 cricetulus_griseus_chok1gshd\n",
+      "29 cavia_aperea\n",
+      "30 dipodomys_ordii\n",
+      "31 lepisosteus_oculatus\n",
+      "32 anas_platyrhynchos\n",
+      "33 canis_familiaris\n",
+      "34 callithrix_jacchus\n",
+      "35 pongo_abelii\n",
+      "36 mustela_putorius_furo\n",
+      "37 mus_musculus_c57bl6nj\n",
+      "38 xenopus_tropicalis\n",
+      "39 nannospalax_galili\n",
+      "40 mus_musculus_pwkphj\n",
+      "41 aotus_nancymaae\n",
+      "42 mus_musculus_nzohlltj\n",
+      "43 mus_musculus_129s1svimj\n",
+      "44 mus_musculus_cbaj\n",
+      "45 cavia_porcellus\n",
+      "46 ochotona_princeps\n",
+      "47 pan_troglodytes\n",
+      "48 petromyzon_marinus\n",
+      "49 pan_paniscus\n",
+      "50 mus_musculus_c3hhej\n",
+      "51 procavia_capensis\n",
+      "52 oryzias_latipes\n",
+      "53 rhinopithecus_bieti\n",
+      "54 danio_rerio\n",
+      "55 gallus_gallus\n",
+      "56 tupaia_belangeri\n",
+      "57 saimiri_boliviensis_boliviensis\n",
+      "58 ciona_intestinalis\n",
+      "59 poecilia_formosa\n",
+      "60 ciona_savignyi\n",
+      "61 myotis_lucifugus\n",
+      "62 sorex_araneus\n",
+      "63 mesocricetus_auratus\n",
+      "64 dasypus_novemcinctus\n",
+      "65 mus_caroli\n",
+      "66 mus_musculus_wsbeij\n",
+      "67 choloepus_hoffmanni\n",
+      "68 heterocephalus_glaber_female\n",
+      "69 jaculus_jaculus\n",
+      "70 cricetulus_griseus_crigri\n",
+      "71 sus_scrofa\n",
+      "72 rattus_norvegicus\n",
+      "73 microtus_ochrogaster\n",
+      "74 sarcophilus_harrisii\n",
+      "75 papio_anubis\n",
+      "76 macaca_fascicularis\n",
+      "77 equus_caballus\n",
+      "78 xiphophorus_maculatus\n",
+      "79 macaca_mulatta\n",
+      "80 mus_musculus_balbcj\n",
+      "81 macaca_nemestrina\n",
+      "82 mus_musculus_dba2j\n",
+      "83 latimeria_chalumnae\n",
+      "84 mus_musculus_nodshiltj\n",
+      "85 mus_spretus\n",
+      "86 gasterosteus_aculeatus\n",
+      "87 gorilla_gorilla\n",
+      "88 oryctolagus_cuniculus\n",
+      "89 oreochromis_niloticus\n",
+      "90 echinops_telfairi\n",
+      "91 nomascus_leucogenys\n",
+      "92 homo_sapiens\n",
+      "93 mus_musculus_casteij\n",
+      "94 ornithorhynchus_anatinus\n",
+      "95 tetraodon_nigroviridis\n",
+      "96 cercocebus_atys\n",
+      "97 vicugna_pacos\n",
+      "98 meleagris_gallopavo\n",
+      "99 mus_musculus_fvbnj\n",
+      "100 ictidomys_tridecemlineatus\n",
+      "101 octodon_degus\n",
+      "102 takifugu_rubripes\n",
+      "103 cebus_capucinus\n",
+      "104 ailuropoda_melanoleuca\n",
+      "105 chinchilla_lanigera\n",
+      "106 felis_catus\n",
+      "107 heterocephalus_glaber_male\n",
+      "108 mus_musculus_lpj\n",
+      "109 loxodonta_africana\n",
+      "110 drosophila_melanogaster\n",
+      "111 notamacropus_eugenii\n",
+      "112 propithecus_coquereli\n"
      ]
     }
    ],
    "source": [
     "answer = do_request(ensembl_server, 'info/species')\n",
-    "for sp in answer['species']:\n",
-    "    print(sp['name'])"
+    "for i, sp in enumerate(answer['species']):\n",
+    "    print(i, sp['name'])"
    ]
   },
   {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
