--- a/notebooks/03_PopGen/Genepop_Format.ipynb
+++ b/notebooks/03_PopGen/Genepop_Format.ipynb
@@ -120,11 +120,11 @@
      "output_type": "stream",
      "text": [
       "Header: 8\n",
-      "Number of loci 14157\n",
+      "Number of loci 13937\n",
       "Number of populations 11\n",
       "Population names: 2436/NA19983, 1459/NA12865, NA18594/NA18594, NA18140/NA18140, NA20881/NA20881, NA19007/NA19007, NA19372/NA19372, M005/NA19652, 2581/NA21371, NA20757/NA20757, Y105/NA19099\n",
       "Individuals per population 82, 165, 84, 85, 88, 86, 90, 77, 171, 88, 167\n",
-      "Individual 1328/NA06989, SNP 1/rs28695703/894218, alleles: 2 2\n"
+      "Individual 1328/NA06989, SNP 1/rs12032637/1455245, alleles: 1 1\n"
      ]
     }
    ],
@@ -197,9 +197,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "143840\n",
-      "138746\n",
-      "55085\n"
+      "144036\n",
+      "138830\n",
+      "55592\n"
      ]
     }
    ],
