--- a/notebooks/Welcome.ipynb
+++ b/notebooks/Welcome.ipynb
@@ -133,8 +133,7 @@
     "* [Introducing Forward-time simulations](04_PopSim/Basic_SimuPOP.ipynb)\n",
     "* [Simulating selection](04_PopSim/Selection.ipynb)\n",
     "* [Doing population structure with island and stepping-stone models](04_PopSim/Pop_Structure.ipynb)\n",
-    "* [Modeling complex demographic scenarios](04_PopSim/Complex.ipynb)\n",
-    "* [Simulating the coalescent with Biopython and fastsimcoal](04_PopSim/Coalescent.ipynb)"
+    "* [Modeling complex demographic scenarios](04_PopSim/Complex.ipynb)\n"
    ]
   },
   {
