--- a/notebooks/05_Phylo/Trees.ipynb
+++ b/notebooks/05_Phylo/Trees.ipynb
@@ -2,20 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import dendropy\n",
-    "\n",
-    "#XXX NOte, this is AFTER reconstruction. Change welcome.ypynb"
+    "import dendropy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -26,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -35,49 +33,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'BDBV_KC545396': 2 2\n",
-      "'TAFV_FJ217162': 4 4\n",
-      "'EBOV_1995_KC242799': 9 9\n",
-      "'EBOV_1995_KC242796': 9 9\n",
-      "'EBOV_1976_KC242801': 9 9\n",
-      "'EBOV_1976_AF272001': 9 9\n",
-      "'EBOV_2007_KC242790': 9 9\n",
-      "'EBOV_2007_KC242785': 9 9\n",
-      "'EBOV_2007_KC242786': 10 10\n",
-      "'EBOV_2007_KC242789': 10 10\n",
-      "'EBOV_2007_KC242787': 11 11\n",
-      "'EBOV_2007_KC242788': 11 11\n",
-      "'EBOV_2007_KC242784': 10 10\n",
-      "'EBOV_2014_KM034562': 9 9\n",
-      "'EBOV_2014_KM034560': 11 11\n",
-      "'EBOV_2014_KM034557': 13 13\n",
-      "'EBOV_2014_KM034556': 13 13\n",
-      "'EBOV_2014_KM034553': 13 13\n",
-      "'EBOV_2014_KM034552': 13 13\n",
-      "'EBOV_2014_KM034558': 11 11\n",
-      "'EBOV_2014_KM034551': 11 11\n",
-      "'EBOV_2014_KM034563': 12 12\n",
-      "'EBOV_2014_KM034549': 12 12\n",
-      "'EBOV_2014_KM034550': 11 11\n",
-      "'EBOV_2014_KM034561': 10 10\n",
-      "'EBOV_2014_KM034555': 10 10\n",
-      "'EBOV_2014_KM034554': 10 10\n",
-      "'EBOV_2014_KM034559': 7 7\n",
-      "'RESTV_FJ621584': 7 7\n",
-      "'RESTV_FJ621585': 9 9\n",
-      "'RESTV_JX477166': 10 10\n",
-      "'RESTV_AB050936': 10 10\n",
-      "'RESTV_FJ621583': 9 9\n",
-      "'RESTV_JX477165': 9 9\n",
-      "'SUDV_JN638998': 9 9\n",
-      "'SUDV_AY729654': 9 9\n",
-      "'SUDV_KC589025': 8 8\n",
-      "'SUDV_EU338380': 8 8\n",
-      "'SUDV_FJ968794': 9 9\n",
-      "'SUDV_KC242783': 9 9\n",
-      "'BDBV_FJ217161': 3 3\n",
       "'BDBV_KC545395': 2 2\n",
-      "'BDBV_KC545394': 2 2\n",
+      "'BDBV_KC545396': 3 3\n",
+      "'EBOV_2007_KC242788': 11 11\n",
+      "'EBOV_2007_KC242787': 11 11\n",
+      "'EBOV_2007_KC242786': 12 12\n",
+      "'EBOV_2007_KC242789': 12 12\n",
+      "'EBOV_2007_KC242784': 11 11\n",
+      "'EBOV_2007_KC242785': 10 10\n",
+      "'EBOV_2007_KC242790': 10 10\n",
+      "'EBOV_1995_KC242799': 10 10\n",
+      "'EBOV_1995_KC242796': 10 10\n",
+      "'EBOV_1976_KC242801': 10 10\n",
+      "'EBOV_1976_AF272001': 10 10\n",
+      "'EBOV_2014_KM034549': 9 9\n",
+      "'EBOV_2014_KM034550': 10 10\n",
+      "'EBOV_2014_KM034555': 11 11\n",
+      "'EBOV_2014_KM034560': 16 16\n",
+      "'EBOV_2014_KM034553': 18 18\n",
+      "'EBOV_2014_KM034552': 18 18\n",
+      "'EBOV_2014_KM034556': 18 18\n",
+      "'EBOV_2014_KM034557': 18 18\n",
+      "'EBOV_2014_KM034551': 16 16\n",
+      "'EBOV_2014_KM034558': 16 16\n",
+      "'EBOV_2014_KM034562': 14 14\n",
+      "'EBOV_2014_KM034554': 13 13\n",
+      "'EBOV_2014_KM034559': 13 13\n",
+      "'EBOV_2014_KM034561': 13 13\n",
+      "'EBOV_2014_KM034563': 8 8\n",
+      "'SUDV_EU338380': 9 9\n",
+      "'SUDV_KC242783': 10 10\n",
+      "'SUDV_FJ968794': 10 10\n",
+      "'SUDV_KC589025': 9 9\n",
+      "'SUDV_AY729654': 10 10\n",
+      "'SUDV_JN638998': 10 10\n",
+      "'RESTV_FJ621584': 8 8\n",
+      "'RESTV_FJ621585': 10 10\n",
+      "'RESTV_JX477166': 11 11\n",
+      "'RESTV_AB050936': 11 11\n",
+      "'RESTV_JX477165': 10 10\n",
+      "'RESTV_FJ621583': 10 10\n",
+      "'TAFV_FJ217162': 5 5\n",
+      "'BDBV_FJ217161': 4 4\n",
+      "'BDBV_KC545394': 1 1\n",
       "'BDBV_KC545393': 1 1\n"
      ]
     }
@@ -94,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -103,101 +101,101 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'BDBV_KC545396': 0 2\n",
-      "'TAFV_FJ217162': 0 4\n",
-      "'EBOV_1995_KC242799': 0 9\n",
-      "'EBOV_1995_KC242796': 0 9\n",
-      "Internal: 1 8\n",
-      "'EBOV_1976_KC242801': 0 9\n",
-      "'EBOV_1976_AF272001': 0 9\n",
-      "Internal: 1 8\n",
-      "Internal: 2 7\n",
-      "'EBOV_2007_KC242790': 0 9\n",
-      "'EBOV_2007_KC242785': 0 9\n",
-      "Internal: 1 8\n",
-      "'EBOV_2007_KC242786': 0 10\n",
-      "'EBOV_2007_KC242789': 0 10\n",
-      "Internal: 1 9\n",
-      "'EBOV_2007_KC242787': 0 11\n",
+      "'BDBV_KC545395': 0 2\n",
+      "'BDBV_KC545396': 0 3\n",
       "'EBOV_2007_KC242788': 0 11\n",
+      "'EBOV_2007_KC242787': 0 11\n",
       "Internal: 1 10\n",
-      "'EBOV_2007_KC242784': 0 10\n",
+      "'EBOV_2007_KC242786': 0 12\n",
+      "'EBOV_2007_KC242789': 0 12\n",
+      "Internal: 1 11\n",
+      "'EBOV_2007_KC242784': 0 11\n",
+      "Internal: 2 10\n",
+      "Internal: 3 9\n",
+      "'EBOV_2007_KC242785': 0 10\n",
+      "'EBOV_2007_KC242790': 0 10\n",
+      "Internal: 1 9\n",
+      "Internal: 4 8\n",
+      "'EBOV_1995_KC242799': 0 10\n",
+      "'EBOV_1995_KC242796': 0 10\n",
+      "Internal: 1 9\n",
+      "'EBOV_1976_KC242801': 0 10\n",
+      "'EBOV_1976_AF272001': 0 10\n",
+      "Internal: 1 9\n",
+      "Internal: 2 8\n",
+      "Internal: 5 7\n",
+      "'EBOV_2014_KM034549': 0 9\n",
+      "'EBOV_2014_KM034550': 0 10\n",
+      "'EBOV_2014_KM034555': 0 11\n",
+      "'EBOV_2014_KM034560': 0 16\n",
+      "'EBOV_2014_KM034553': 0 18\n",
+      "'EBOV_2014_KM034552': 0 18\n",
+      "Internal: 1 17\n",
+      "'EBOV_2014_KM034556': 0 18\n",
+      "'EBOV_2014_KM034557': 0 18\n",
+      "Internal: 1 17\n",
+      "Internal: 2 16\n",
+      "Internal: 3 15\n",
+      "'EBOV_2014_KM034551': 0 16\n",
+      "'EBOV_2014_KM034558': 0 16\n",
+      "Internal: 1 15\n",
+      "Internal: 4 14\n",
+      "'EBOV_2014_KM034562': 0 14\n",
+      "Internal: 5 13\n",
+      "'EBOV_2014_KM034554': 0 13\n",
+      "Internal: 6 12\n",
+      "'EBOV_2014_KM034559': 0 13\n",
+      "'EBOV_2014_KM034561': 0 13\n",
+      "Internal: 1 12\n",
+      "Internal: 7 11\n",
+      "Internal: 8 10\n",
+      "Internal: 9 9\n",
+      "Internal: 10 8\n",
+      "'EBOV_2014_KM034563': 0 8\n",
+      "Internal: 11 7\n",
+      "Internal: 12 6\n",
+      "'SUDV_EU338380': 0 9\n",
+      "'SUDV_KC242783': 0 10\n",
+      "'SUDV_FJ968794': 0 10\n",
+      "Internal: 1 9\n",
+      "Internal: 2 8\n",
+      "'SUDV_KC589025': 0 9\n",
+      "'SUDV_AY729654': 0 10\n",
+      "'SUDV_JN638998': 0 10\n",
+      "Internal: 1 9\n",
+      "Internal: 2 8\n",
+      "Internal: 3 7\n",
+      "'RESTV_FJ621584': 0 8\n",
+      "'RESTV_FJ621585': 0 10\n",
+      "'RESTV_JX477166': 0 11\n",
+      "'RESTV_AB050936': 0 11\n",
+      "Internal: 1 10\n",
       "Internal: 2 9\n",
+      "'RESTV_JX477165': 0 10\n",
+      "'RESTV_FJ621583': 0 10\n",
+      "Internal: 1 9\n",
       "Internal: 3 8\n",
       "Internal: 4 7\n",
       "Internal: 5 6\n",
-      "'EBOV_2014_KM034562': 0 9\n",
-      "'EBOV_2014_KM034560': 0 11\n",
-      "'EBOV_2014_KM034557': 0 13\n",
-      "'EBOV_2014_KM034556': 0 13\n",
-      "Internal: 1 12\n",
-      "'EBOV_2014_KM034553': 0 13\n",
-      "'EBOV_2014_KM034552': 0 13\n",
-      "Internal: 1 12\n",
-      "Internal: 2 11\n",
-      "Internal: 3 10\n",
-      "'EBOV_2014_KM034558': 0 11\n",
-      "'EBOV_2014_KM034551': 0 11\n",
-      "Internal: 1 10\n",
-      "Internal: 4 9\n",
-      "Internal: 5 8\n",
-      "'EBOV_2014_KM034563': 0 12\n",
-      "'EBOV_2014_KM034549': 0 12\n",
-      "Internal: 1 11\n",
-      "'EBOV_2014_KM034550': 0 11\n",
-      "Internal: 2 10\n",
-      "'EBOV_2014_KM034561': 0 10\n",
-      "Internal: 3 9\n",
-      "'EBOV_2014_KM034555': 0 10\n",
-      "'EBOV_2014_KM034554': 0 10\n",
-      "Internal: 1 9\n",
-      "Internal: 4 8\n",
-      "Internal: 6 7\n",
-      "'EBOV_2014_KM034559': 0 7\n",
-      "Internal: 7 6\n",
-      "Internal: 8 5\n",
-      "'RESTV_FJ621584': 0 7\n",
-      "'RESTV_FJ621585': 0 9\n",
-      "'RESTV_JX477166': 0 10\n",
-      "'RESTV_AB050936': 0 10\n",
-      "Internal: 1 9\n",
-      "Internal: 2 8\n",
-      "'RESTV_FJ621583': 0 9\n",
-      "'RESTV_JX477165': 0 9\n",
-      "Internal: 1 8\n",
-      "Internal: 3 7\n",
-      "Internal: 4 6\n",
-      "'SUDV_JN638998': 0 9\n",
-      "'SUDV_AY729654': 0 9\n",
-      "Internal: 1 8\n",
-      "'SUDV_KC589025': 0 8\n",
-      "Internal: 2 7\n",
-      "'SUDV_EU338380': 0 8\n",
-      "'SUDV_FJ968794': 0 9\n",
-      "'SUDV_KC242783': 0 9\n",
-      "Internal: 1 8\n",
-      "Internal: 2 7\n",
-      "Internal: 3 6\n",
-      "Internal: 5 5\n",
-      "Internal: 9 4\n",
-      "Internal: 10 3\n",
-      "'BDBV_FJ217161': 0 3\n",
-      "Internal: 11 2\n",
-      "Internal: 12 1\n",
-      "'BDBV_KC545395': 0 2\n",
-      "'BDBV_KC545394': 0 2\n",
-      "Internal: 1 1\n",
+      "Internal: 13 5\n",
+      "'TAFV_FJ217162': 0 5\n",
+      "Internal: 14 4\n",
+      "'BDBV_FJ217161': 0 4\n",
+      "Internal: 15 3\n",
+      "Internal: 16 2\n",
+      "Internal: 17 1\n",
+      "'BDBV_KC545394': 0 1\n",
       "'BDBV_KC545393': 0 1\n",
-      "Internal: 13 0\n"
+      "Internal: 18 0\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "13"
+       "18"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -244,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -253,49 +251,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'BDBV_KC545396' (2)\n",
-      "'TAFV_FJ217162' (4)\n",
-      "'EBOV_1995_KC242799' (9)\n",
-      "'EBOV_1995_KC242796' (9)\n",
-      "'EBOV_1976_KC242801' (9)\n",
-      "'EBOV_1976_AF272001' (9)\n",
-      "'EBOV_2007_KC242790' (9)\n",
-      "'EBOV_2007_KC242785' (9)\n",
-      "'EBOV_2007_KC242786' (10)\n",
-      "'EBOV_2007_KC242789' (10)\n",
-      "'EBOV_2007_KC242787' (11)\n",
-      "'EBOV_2007_KC242788' (11)\n",
-      "'EBOV_2007_KC242784' (10)\n",
-      "'EBOV_2014_KM034562' (9)\n",
-      "'EBOV_2014_KM034560' (11)\n",
-      "'EBOV_2014_KM034557' (13)\n",
-      "'EBOV_2014_KM034556' (13)\n",
-      "'EBOV_2014_KM034553' (13)\n",
-      "'EBOV_2014_KM034552' (13)\n",
-      "'EBOV_2014_KM034558' (11)\n",
-      "'EBOV_2014_KM034551' (11)\n",
-      "'EBOV_2014_KM034563' (12)\n",
-      "'EBOV_2014_KM034549' (12)\n",
-      "'EBOV_2014_KM034550' (11)\n",
-      "'EBOV_2014_KM034561' (10)\n",
-      "'EBOV_2014_KM034555' (10)\n",
-      "'EBOV_2014_KM034554' (10)\n",
-      "'EBOV_2014_KM034559' (7)\n",
-      "'RESTV_FJ621584' (7)\n",
-      "'RESTV_FJ621585' (9)\n",
-      "'RESTV_JX477166' (10)\n",
-      "'RESTV_AB050936' (10)\n",
-      "'RESTV_FJ621583' (9)\n",
-      "'RESTV_JX477165' (9)\n",
-      "'SUDV_JN638998' (9)\n",
-      "'SUDV_AY729654' (9)\n",
-      "'SUDV_KC589025' (8)\n",
-      "'SUDV_EU338380' (8)\n",
-      "'SUDV_FJ968794' (9)\n",
-      "'SUDV_KC242783' (9)\n",
-      "'BDBV_FJ217161' (3)\n",
       "'BDBV_KC545395' (2)\n",
-      "'BDBV_KC545394' (2)\n",
+      "'BDBV_KC545396' (3)\n",
+      "'EBOV_2007_KC242788' (11)\n",
+      "'EBOV_2007_KC242787' (11)\n",
+      "'EBOV_2007_KC242786' (12)\n",
+      "'EBOV_2007_KC242789' (12)\n",
+      "'EBOV_2007_KC242784' (11)\n",
+      "'EBOV_2007_KC242785' (10)\n",
+      "'EBOV_2007_KC242790' (10)\n",
+      "'EBOV_1995_KC242799' (10)\n",
+      "'EBOV_1995_KC242796' (10)\n",
+      "'EBOV_1976_KC242801' (10)\n",
+      "'EBOV_1976_AF272001' (10)\n",
+      "'EBOV_2014_KM034549' (9)\n",
+      "'EBOV_2014_KM034550' (10)\n",
+      "'EBOV_2014_KM034555' (11)\n",
+      "'EBOV_2014_KM034560' (16)\n",
+      "'EBOV_2014_KM034553' (18)\n",
+      "'EBOV_2014_KM034552' (18)\n",
+      "'EBOV_2014_KM034556' (18)\n",
+      "'EBOV_2014_KM034557' (18)\n",
+      "'EBOV_2014_KM034551' (16)\n",
+      "'EBOV_2014_KM034558' (16)\n",
+      "'EBOV_2014_KM034562' (14)\n",
+      "'EBOV_2014_KM034554' (13)\n",
+      "'EBOV_2014_KM034559' (13)\n",
+      "'EBOV_2014_KM034561' (13)\n",
+      "'EBOV_2014_KM034563' (8)\n",
+      "'SUDV_EU338380' (9)\n",
+      "'SUDV_KC242783' (10)\n",
+      "'SUDV_FJ968794' (10)\n",
+      "'SUDV_KC589025' (9)\n",
+      "'SUDV_AY729654' (10)\n",
+      "'SUDV_JN638998' (10)\n",
+      "'RESTV_FJ621584' (8)\n",
+      "'RESTV_FJ621585' (10)\n",
+      "'RESTV_JX477166' (11)\n",
+      "'RESTV_AB050936' (11)\n",
+      "'RESTV_JX477165' (10)\n",
+      "'RESTV_FJ621583' (10)\n",
+      "'TAFV_FJ217162' (5)\n",
+      "'BDBV_FJ217161' (4)\n",
+      "'BDBV_KC545394' (1)\n",
       "'BDBV_KC545393' (1)\n"
      ]
     }
@@ -312,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -321,50 +319,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "'BDBV_KC545394' (1)\n",
       "'BDBV_KC545393' (1)\n",
-      "'BDBV_KC545396' (2)\n",
       "'BDBV_KC545395' (2)\n",
-      "'BDBV_KC545394' (2)\n",
-      "'BDBV_FJ217161' (3)\n",
-      "'TAFV_FJ217162' (4)\n",
-      "'EBOV_2014_KM034559' (7)\n",
-      "'RESTV_FJ621584' (7)\n",
-      "'SUDV_KC589025' (8)\n",
-      "'SUDV_EU338380' (8)\n",
-      "'EBOV_1995_KC242799' (9)\n",
-      "'EBOV_1995_KC242796' (9)\n",
-      "'EBOV_1976_KC242801' (9)\n",
-      "'EBOV_1976_AF272001' (9)\n",
-      "'EBOV_2007_KC242790' (9)\n",
-      "'EBOV_2007_KC242785' (9)\n",
-      "'EBOV_2014_KM034562' (9)\n",
-      "'RESTV_FJ621585' (9)\n",
-      "'RESTV_FJ621583' (9)\n",
-      "'RESTV_JX477165' (9)\n",
-      "'SUDV_JN638998' (9)\n",
-      "'SUDV_AY729654' (9)\n",
-      "'SUDV_FJ968794' (9)\n",
-      "'SUDV_KC242783' (9)\n",
-      "'EBOV_2007_KC242786' (10)\n",
-      "'EBOV_2007_KC242789' (10)\n",
-      "'EBOV_2007_KC242784' (10)\n",
-      "'EBOV_2014_KM034561' (10)\n",
-      "'EBOV_2014_KM034555' (10)\n",
-      "'EBOV_2014_KM034554' (10)\n",
-      "'RESTV_JX477166' (10)\n",
-      "'RESTV_AB050936' (10)\n",
-      "'EBOV_2007_KC242787' (11)\n",
+      "'BDBV_KC545396' (3)\n",
+      "'BDBV_FJ217161' (4)\n",
+      "'TAFV_FJ217162' (5)\n",
+      "'EBOV_2014_KM034563' (8)\n",
+      "'RESTV_FJ621584' (8)\n",
+      "'EBOV_2014_KM034549' (9)\n",
+      "'SUDV_EU338380' (9)\n",
+      "'SUDV_KC589025' (9)\n",
+      "'EBOV_2007_KC242785' (10)\n",
+      "'EBOV_2007_KC242790' (10)\n",
+      "'EBOV_1995_KC242799' (10)\n",
+      "'EBOV_1995_KC242796' (10)\n",
+      "'EBOV_1976_KC242801' (10)\n",
+      "'EBOV_1976_AF272001' (10)\n",
+      "'EBOV_2014_KM034550' (10)\n",
+      "'SUDV_KC242783' (10)\n",
+      "'SUDV_FJ968794' (10)\n",
+      "'SUDV_AY729654' (10)\n",
+      "'SUDV_JN638998' (10)\n",
+      "'RESTV_FJ621585' (10)\n",
+      "'RESTV_JX477165' (10)\n",
+      "'RESTV_FJ621583' (10)\n",
       "'EBOV_2007_KC242788' (11)\n",
-      "'EBOV_2014_KM034560' (11)\n",
-      "'EBOV_2014_KM034558' (11)\n",
-      "'EBOV_2014_KM034551' (11)\n",
-      "'EBOV_2014_KM034550' (11)\n",
-      "'EBOV_2014_KM034563' (12)\n",
-      "'EBOV_2014_KM034549' (12)\n",
-      "'EBOV_2014_KM034557' (13)\n",
-      "'EBOV_2014_KM034556' (13)\n",
-      "'EBOV_2014_KM034553' (13)\n",
-      "'EBOV_2014_KM034552' (13)\n"
+      "'EBOV_2007_KC242787' (11)\n",
+      "'EBOV_2007_KC242784' (11)\n",
+      "'EBOV_2014_KM034555' (11)\n",
+      "'RESTV_JX477166' (11)\n",
+      "'RESTV_AB050936' (11)\n",
+      "'EBOV_2007_KC242786' (12)\n",
+      "'EBOV_2007_KC242789' (12)\n",
+      "'EBOV_2014_KM034554' (13)\n",
+      "'EBOV_2014_KM034559' (13)\n",
+      "'EBOV_2014_KM034561' (13)\n",
+      "'EBOV_2014_KM034562' (14)\n",
+      "'EBOV_2014_KM034560' (16)\n",
+      "'EBOV_2014_KM034551' (16)\n",
+      "'EBOV_2014_KM034558' (16)\n",
+      "'EBOV_2014_KM034553' (18)\n",
+      "'EBOV_2014_KM034552' (18)\n",
+      "'EBOV_2014_KM034556' (18)\n",
+      "'EBOV_2014_KM034557' (18)\n"
      ]
     }
    ],
@@ -387,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -397,15 +395,16 @@
      "output_type": "stream",
      "text": [
       "{'BDBV'} 1\n",
-      "{'TAFV'} 1\n",
+      "{'BDBV'} 1\n",
+      "{'EBOV2007'} 7\n",
       "{'EBOV1995'} 2\n",
       "{'EBOV1976'} 2\n",
-      "{'EBOV2007'} 7\n",
       "{'EBOV2014'} 15\n",
-      "{'RESTV'} 6\n",
       "{'SUDV'} 6\n",
+      "{'RESTV'} 6\n",
+      "{'TAFV'} 1\n",
       "{'BDBV'} 1\n",
-      "{'BDBV'} 2\n",
+      "{'BDBV'} 1\n",
       "{'BDBV'} 1\n"
      ]
     }
